# MotionDetection

./: CMakeLists.txt  README.md
include/: MotionDetector.hpp  scanner.hpp
src/: MotionDetector.cpp  main.cpp  scanner.cpp
